Revision history for RPi-Pin

2.3607 UNREL
        -

2.3606  2018-04-16
        - removed RPi::Const from t/40, it wasn't required, and eliminated a
          prereq we didn't need

2.3605  2018-04-16
        - removed 0-1023 restriction in pwm()
        - removed 'use' statement for RPi::WiringPi::Constant from t/40 as we
          deprecated that for RPi::Const, and this was breaking the test	
        - changed use statement in SYNOPSIS (closes #2)

2.3604  2017-07-06
        - remove erroneous call to pin_to_gpio() in pwm() (Reported by Francesca
           Andriolo)

2.3603 2017-06-28
        - bump ver of prereq WiringPi::API to 2.3612

2.3602  2017-06-24
        - added mode_alt(), allows changing any pin to any mode

2.3601  2017-05-27
        - separated this distribution from RPi::WiringPi::Pin
        - added set_interrupt(), deprecated interrupt_set()
        - added setup() routine in new() if not called elsewhere
        - hacked tests to conform to being a stand-alone distribution